Changes from local environment - mainly new idea versions and some changes to mod_rpaf

--- a/www-apache/mod_rpaf/files/10_mod_rpaf.conf
+++ b/www-apache/mod_rpaf/files/10_mod_rpaf.conf
@@ -1,6 +1,8 @@
 <IfDefine RPAF>
 LoadModule rpaf_module modules/mod_rpaf.so
-RPAFenable on
+RPAF_Enable on
+#RPAF_ProxyIps 127.0.0.1
+#RPAF_Header X-Forwarded-For
 </IfDefine>
 
 # vim: ts=4 filetype=apache
